--- a/public/index.html
+++ b/public/index.html
@@ -67,10 +67,10 @@
       </section>
 
     </main>
-    <div class="absolute hidden image m-6 bg-black/90 rounded-md">
+    <div class="containerAbs absolute hidden image m-6 bg-black/90 rounded-md">
       <div class="relative">
 
-        <p class="text-2xl text-white absolute right-10">x</p>
+        <p class="text-2xl text-white absolute right-10 btn-remove cursor-pointer">x</p>
       </div>
       <div class="image-container flex flex-col items-center justify-center p-10">
         <h2 class="msg text-white font-medium text-lg mb-5"></h2>
